fix(SimpleButton.css): children not aligned vertically to the center

--- a/src/components/bedrock/SimpleButton.css
+++ b/src/components/bedrock/SimpleButton.css
@@ -2,6 +2,7 @@
   padding: calc(var(--minecraftdepth) * 2);
   background-color: #E6E8EB;
   box-sizing: border-box;
+  font-family: "Mojangles";
   /* BedrockColors.grey230232235 */
   overflow: none;
   display: flex;
@@ -19,11 +20,18 @@
 }
 
 .minecraft-button-child {
-  display: flex;
-  justify-content: center;
+  position: relative;
+  top: 50%; 
+  transform: translateY(-50%);
   max-width: 100%;
   max-height: 100%;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+
+.minecraft-button-child p {
+  position: relative;
+  top: 50%; 
+  transform: translateY(-50%);
 }
